# c_skeleton

./: CMakeLists.txt  go
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.c
